--- a/Session6/3-simon-game/styles.css
+++ b/Session6/3-simon-game/styles.css
@@ -38,3 +38,13 @@ h1 {
 .yellow {
   background-color: yellow;
 }
+
+.pressed {
+  box-shadow: 0 0 0 20px white;
+  background-color: gray;
+}
+
+.game-over {
+  background-color: red;
+  opacity: 0.8;
+}
